# solid-adventure

./: .env.example  .gitignore  .replit  README.md  README_DEPLOYMENT.md  pyproject.toml  render.yaml  replit.md
attached_assets/: Pasted-Super-strong-model-ready-prompt-drop-into-a-code-writing-agent-make-a-complete-project-now-Y-1762602610049_1762602610050.txt
backend/: app.py  config.json  gunicorn_config.py  models.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Watermark.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  socket.ts  theme.ts
frontend/src/pages/: AdminPanel.tsx  Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Profile.tsx  Signup.tsx
frontend/src/types/: index.ts
