[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "bcrypt>=5.0.0",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-engineio>=4.12.3",
    "python-socketio>=5.14.3",
    "python-telegram-bot>=22.5",
    "pywebpush>=2.1.1",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
]
